# SquidBot

./: LICENSE  README.md
.github/workflows/: release.yml  test.yml
app/: .env.example  .gitignore  Makefile  README.md  agent.py  channels.py  character.py  client.py  config.py  daemon.py  lanes.py  main.py  memory_db.py  playwright_check.py  pyproject.toml  release.py  requirements.txt  scheduler.py  server.py  session.py  skills.py  test_cron_integration.py  test_cron_verify.py  test_hooks.py  test_web3.py
app/plugins/: __init__.py  base.py  hooks.py  loader.py  web3_plugin.py
app/skills_template/search/: SKILL.md
app/squidbot/: __init__.py  agent.py  channels.py  character.py  client.py  config.py  daemon.py  main.py  memory_db.py  scheduler.py  server.py  session.py  skills.py
app/squidbot/plugins/: __init__.py  base.py  loader.py  web3_plugin.py
app/squidbot/skills_template/reminder/: SKILL.md
app/squidbot/tools/: __init__.py  base.py  browser.py  coding.py  cron.py  memory_tool.py  web_search.py
app/tests/: conftest.py  test_agent.py  test_character.py  test_coding.py  test_config.py  test_cron.py  test_hooks.py  test_integration_chaining.py  test_memory.py  test_proactive_messaging.py  test_scheduler.py  test_screenshot_parsing.py  test_session.py  test_skills.py  test_sqlite_vec.py  test_tool_chaining.py  test_tools.py  test_web3_plugin.py
app/tools/: __init__.py  browser.py  coding.py  cron.py  memory_tool.py  web_search.py
